# pyftpclient

./: .gitignore  LICENCE  LICENCE.txt  MANIFEST.in  README.md  ftp_client.py  publish.bat  pyproject.toml  replace_version_in_setup_py.py  requirements.txt  setup.py
pyftpclient/: __init__.py  client_base.py  ftp_client.py  sftp_client.py  shortcurts.py
