[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyftpclient"
version = "0.2.0"
description = "ftp client wrapper to simplify working with paramiko or ftplib"
readme = "README.md"
requires-python = ">=3.14"
license = {file = "LICENCE"}
authors = [
    {name = "Alex Buchkovsky", email = "alex.buchkovsky@gmail.com"}
]
keywords = ["wrapper", "sftp", "client", "ftp"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
    "paramiko==4.0.0",
    "os_utils==0.2.0",
]

[project.optional-dependencies]
dev = [
    "mypy==1.18.2",
    "pytest==9.0.0",
    "pytest-cov==7.0.0",
    "pytest-mock==3.15.1",
    "ruff==0.14.4",
    "types-paramiko==4.0.0.20250822",
]

[project.urls]
Homepage = "https://github.com/ahcub/pyftpclient"
Repository = "https://github.com/ahcub/pyftpclient"

[tool.hatch.build.targets.sdist]
include = [
    "/pyftpclient",
    "/LICENCE",
    "/README.md",
]

[tool.hatch.build.targets.wheel]
packages = ["pyftpclient"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "ALL",  # Enable all rules
]
ignore = [
    "D203",    # one-blank-line-before-class (conflicts with D211)
    "D213",    # multi-line-summary-second-line (conflicts with D212)
    "COM812",  # missing-trailing-comma (conflicts with formatter)
    "ISC001",  # single-line-implicit-string-concatenation (conflicts with formatter)
    "S101",    # assert-used (assert is acceptable for runtime type narrowing)
    "ANN401",  # any-type (Any is acceptable for delegation methods)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"]  # Missing docstring in public package
"tests/**/*.py" = [
    "D100",    # Missing docstring in public module
    "D103",    # Missing docstring in public function
    "PLR2004", # Magic value used in comparison
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["pyftpclient"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = "os_utils.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "paramiko.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=pyftpclient",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["pyftpclient"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]
